// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getAllUrlsFromDocsConfig > yes-version-no-tabs > gets all urls from docs config 1`] = `
[
  "docs/api/section-1/page-1",
  "docs/api/page-2",
  "docs/api/section-2",
  "docs/api/section-2/page-4",
  "docs/api/page-5",
  "docs/api/version-1",
  "docs/api/version-1/section-1/page-1",
  "docs/api/version-1/page-2",
  "docs/api/version-1/section-2",
  "docs/api/version-1/section-2/page-4",
  "docs/api/version-1/page-5",
  "docs/api/version-1/version-1",
  "docs/api/version-2/page-7",
  "docs/api/version-2/page-8",
  "docs/api/version-2/version-1",
  "docs/api/version-2/section-5/page-10",
]
`;

exports[`getNavigationRoot > yes-version-no-tabs > gets navigation root for /docs/api 1`] = `
{
  "children": [
    {
      "hidden": undefined,
      "icon": undefined,
      "id": "root..*.uv.section-3.page-5",
      "pageId": "page-5.md",
      "slug": "docs/api/page-5",
      "title": "Page 5",
      "type": "page",
    },
    {
      "hidden": undefined,
      "icon": undefined,
      "id": "root..*.uv.section-3.page-6",
      "pageId": "page-6.md",
      "slug": "docs/api/version-1",
      "title": "Page 6",
      "type": "page",
    },
  ],
  "collapsed": false,
  "hidden": undefined,
  "icon": undefined,
  "id": "root..*.uv.section-3",
  "overviewPageId": undefined,
  "pointsTo": "docs/api/page-5",
  "slug": "docs/api",
  "title": "Section 3",
  "type": "section",
}
`;

exports[`getNavigationRoot > yes-version-no-tabs > gets navigation root for /docs/api/page-5 1`] = `
{
  "hidden": undefined,
  "icon": undefined,
  "id": "root..*.uv.section-3.page-5",
  "pageId": "page-5.md",
  "slug": "docs/api/page-5",
  "title": "Page 5",
  "type": "page",
}
`;

exports[`getNavigationRoot > yes-version-no-tabs > gets navigation root for /docs/api/section-1 1`] = `
{
  "children": [
    {
      "hidden": undefined,
      "icon": undefined,
      "id": "root..*.uv.section-1.page-1",
      "pageId": "page-1.md",
      "slug": "docs/api/section-1/page-1",
      "title": "Page 1",
      "type": "page",
    },
    {
      "hidden": undefined,
      "icon": undefined,
      "id": "root..*.uv.section-1.page-2",
      "pageId": "page-2.md",
      "slug": "docs/api/page-2",
      "title": "Page 2",
      "type": "page",
    },
  ],
  "collapsed": false,
  "hidden": undefined,
  "icon": undefined,
  "id": "root..*.uv.section-1",
  "overviewPageId": undefined,
  "pointsTo": "docs/api/section-1/page-1",
  "slug": "docs/api/section-1",
  "title": "Section 1",
  "type": "section",
}
`;

exports[`getNavigationRoot > yes-version-no-tabs > gets navigation root for /docs/api/version-1 1`] = `
{
  "hidden": undefined,
  "icon": undefined,
  "id": "root..*.uv.section-3.page-6",
  "pageId": "page-6.md",
  "slug": "docs/api/version-1",
  "title": "Page 6",
  "type": "page",
}
`;

exports[`getNavigationRoot > yes-version-no-tabs > gets navigation root for /docs/api/version-1 2`] = `
{
  "hidden": undefined,
  "icon": undefined,
  "id": "root..*.uv.section-3.page-6",
  "pageId": "page-6.md",
  "slug": "docs/api/version-1",
  "title": "Page 6",
  "type": "page",
}
`;

exports[`getNavigationRoot > yes-version-no-tabs > gets navigation root for /docs/api/version-1/page-5 1`] = `
{
  "hidden": undefined,
  "icon": undefined,
  "id": "root..version-1.uv.section-3.page-5",
  "pageId": "page-5.md",
  "slug": "docs/api/version-1/page-5",
  "title": "Page 5",
  "type": "page",
}
`;

exports[`getNavigationRoot > yes-version-no-tabs > gets navigation root for /docs/api/version-1/section-1 1`] = `
{
  "children": [
    {
      "hidden": undefined,
      "icon": undefined,
      "id": "root..version-1.uv.section-1.page-1",
      "pageId": "page-1.md",
      "slug": "docs/api/version-1/section-1/page-1",
      "title": "Page 1",
      "type": "page",
    },
    {
      "hidden": undefined,
      "icon": undefined,
      "id": "root..version-1.uv.section-1.page-2",
      "pageId": "page-2.md",
      "slug": "docs/api/version-1/page-2",
      "title": "Page 2",
      "type": "page",
    },
  ],
  "collapsed": false,
  "hidden": undefined,
  "icon": undefined,
  "id": "root..version-1.uv.section-1",
  "overviewPageId": undefined,
  "pointsTo": "docs/api/version-1/section-1/page-1",
  "slug": "docs/api/version-1/section-1",
  "title": "Section 1",
  "type": "section",
}
`;

exports[`getNavigationRoot > yes-version-no-tabs > gets navigation root for /docs/api/version-1/version-1 1`] = `
{
  "hidden": undefined,
  "icon": undefined,
  "id": "root..version-1.uv.section-3.page-6",
  "pageId": "page-6.md",
  "slug": "docs/api/version-1/version-1",
  "title": "Page 6",
  "type": "page",
}
`;

exports[`getNavigationRoot > yes-version-no-tabs > gets navigation root for /docs/api/version-2 1`] = `
{
  "children": [
    {
      "hidden": undefined,
      "icon": undefined,
      "id": "root..version-2.uv.section-4.page-7",
      "pageId": "page-7.md",
      "slug": "docs/api/version-2/page-7",
      "title": "Page 7",
      "type": "page",
    },
    {
      "hidden": undefined,
      "icon": undefined,
      "id": "root..version-2.uv.section-4.page-8",
      "pageId": "page-8.md",
      "slug": "docs/api/version-2/page-8",
      "title": "Page 8",
      "type": "page",
    },
  ],
  "collapsed": false,
  "hidden": undefined,
  "icon": undefined,
  "id": "root..version-2.uv.section-4",
  "overviewPageId": undefined,
  "pointsTo": "docs/api/version-2/page-7",
  "slug": "docs/api/version-2",
  "title": "Section 4",
  "type": "section",
}
`;

exports[`getNavigationRoot > yes-version-no-tabs > gets navigation root for /docs/api/version-2/version-1 1`] = `
{
  "hidden": undefined,
  "icon": undefined,
  "id": "root..version-2.uv.section-5.page-9",
  "pageId": "page-9.md",
  "slug": "docs/api/version-2/version-1",
  "title": "Page 9",
  "type": "page",
}
`;
